@@ -162,6 +162,8 @@ new Python module called :file:`todo.py` and add the setup function::
        app.connect('doctree-resolved', process_todo_nodes)
        app.connect('env-purge-doc', purge_todos)
 
+       return '0.1'   # identifies the version of our extension
+
 The calls in this function refer to classes and functions not yet written.  What
 the individual calls do is the following:
 
